# rnn_train_ring_attractor

./: .gitignore  README.md  bwd_fp32.py  compare_models_fair.py  compare_models_no_bumploss.py  compare_models_with_bumploss.py  dquery  dquery.cu  fwd.py  fwd_fp32.py  fwd_fp32_tr.py  generate_av_integration_data.py  matmul  matmul.cu  model_bf16.py  model_bf16_pre.py  model_fp32.py  requirements.txt  ring_rnn_cuda.py  rnn_cuda.py  test_grad.py  train_general_ring_no_gain.py  train_gru.py  train_ring_attractor.py  train_ring_attractor_save_movie.py
assets/: REPORT.md  bwd_algo.drawio  bwd_algo.drawio.xml  tensor_core_fused.concepts
compare/: compare_models_fair.py  compare_models_no_bumploss.py  compare_models_with_bumploss.py
cpp/: CMakeLists.txt  bwd.cpp  bwd.cu  cuda_common.cuh  fwd.cpp  fwd.cu  fwd_kernel.cu  main.cu  matmul.cpp  matmul.py  matmul_kernel.cu  ring_rnn_cuda.py  rnn_cuda.py  torch_no_loop.cpp  torch_no_loop.cu  torch_sum.cpp  torch_sum_fp32.cpp  torch_sum_fp32_kernel.cu  torch_sum_kernel.cu  utils.cuh
cpp/kernels/: bwd_full_precision.cuh  bwd_mixed_precision_aggo_re.cuh  bwd_mixed_precision_aggressive.cuh  bwd_mixed_precision_wmma.cuh  bwd_simple.cuh  bwd_tc_idx.cuh  fwd_128.cu  fwd_128_simple.cuh  fwd_1kernels_simple.cuh  fwd_1loop.cuh  fwd_1loop_gridsync.cuh  fwd_1loop_noact.cuh  fwd_1loop_tc.cuh  fwd_1loop_tc_idx.cuh  fwd_2kernels_simple.cuh  fwd_3kernels_simple.cuh  fwd_3kernels_simple_act.cuh  fwd_3kernels_simple_act_loops.cuh  fwd_fp32.cuh  fwd_hardcode.cu  fwd_hardcode.cuh  fwd_loops_opt.cuh  fwd_n128_a2.cu  fwd_n128_a23.cu  fwd_n128_a23.cuh  fwd_n128_a23_simple.cuh
legacy/: bwd_fp32.py  fwd_bf16.py  model_bf16.py  model_fp32.py
train/: train_causal_transformer.py  train_general_ring_attractor.py  train_general_ring_no_gain.py  train_gru.py  (+2 more)
(+1 files in other folders)
